force-app/main/default/objects/Payment_Request__c/Payment_Request__c.object-meta.xml
<CustomObject>
    <label>Payment Request</label>
    <nameField>
        <displayFormat>PR-{0000000}</displayFormat>
        <label>Payment Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>