force-app/main/default/objects/Payment_Request__c/fields/Account_Master__c.field-meta.xml
<CustomField>
    <fullName>Account_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>Account_Master__c.Name</field>
            <operation>notContain</operation>
            <value>Cash Bank Sobha LLC</value>
        </filterItems>
        <filterItems>
            <field>Account_Master__c.Account_Type__c</field>
            <operation>equals</operation>
            <value>Corporate</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account_Master__c</referenceTo>
    <relationshipLabel>Payment Requests</relationshipLabel>
    <relationshipName>Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>