force-app/main/default/objects/Payment_Request__c/fields/Account_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Received_Date__c</fullName>
    <label>Account Received Date</label>
    <type>Date</type>
</CustomField>