force-app/main/default/objects/Payment_Request__c/fields/Account_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Account_Remarks__c</fullName>
    <label>Account Remarks</label>
    <type>TextArea</type>
</CustomField>