force-app/main/default/objects/Payment_Request__c/fields/Advance_Payment__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advance Payment</label>
    <type>Checkbox</type>
</CustomField>