force-app/main/default/objects/Payment_Request__c/fields/Allocated__c.field-meta.xml
<CustomField>
    <fullName>Allocated__c</fullName>
    <formula>(From_Booking__c &amp;&amp; (Towards_Unit_Price_Amount__c &lt;&gt; NULL || Towards_Pre_Registration_Amount__c &lt;&gt; NULL || Towards_Other_Charges_Amount__c &lt;&gt; NULL || Towards_Unit_Price_Amount__c &lt;&gt; 0 || Towards_Pre_Registration_Amount__c &lt;&gt; 0 || Towards_Other_Charges_Amount__c &lt;&gt; 0)) || (NOT(From_Booking__c) &amp;&amp; (DP_Amount__c &lt;&gt; NULL || DP_Amount_2__c &lt;&gt; NULL || DLD_Amount_2__c &lt;&gt; NULL || DLD_Amount_in_New_Sale__c &lt;&gt; NULL || DP_Amount__c &lt;&gt; 0 || DP_Amount_2__c &lt;&gt; 0 || DLD_Amount_2__c &lt;&gt; 0 || DLD_Amount_in_New_Sale__c &lt;&gt; 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocated?</label>
    <type>Checkbox</type>
</CustomField>