force-app/main/default/objects/Payment_Request__c/fields/Amount_Confirmed_By_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Amount_Confirmed_By_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amount Confirmed By Accounts</label>
    <type>Checkbox</type>
</CustomField>