force-app/main/default/objects/Payment_Request__c/fields/Amount_Towards__c.field-meta.xml
<CustomField>
    <fullName>Amount_Towards__c</fullName>
    <label>Amount Towards</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit Price</fullName>
            </value>
            <value>
                <fullName>Other Amount</fullName>
            </value>
            <value>
                <fullName>Registration Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>