force-app/main/default/objects/Payment_Request__c/fields/Application_Booking__c.field-meta.xml
<CustomField>
    <fullName>Application_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application / Booking</label>
    <referenceTo>PropStrength__Application_Booking__c</referenceTo>
    <relationshipLabel>Payment Requests</relationshipLabel>
    <relationshipName>Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>