force-app/main/default/objects/Payment_Request__c/fields/Approved_Time__c.field-meta.xml
<CustomField>
    <fullName>Approved_Time__c</fullName>
    <formula>TIMEVALUE( New_Sale_Approval__r.Approved_Date__c )</formula>
    <label>Approved Time</label>
    <type>Time</type>
</CustomField>