force-app/main/default/objects/Payment_Request__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <formula>IF(ISPICKVAL(Mode__c,&apos;OTC Deposits&apos;),&apos;OTC&apos;,IF(ISPICKVAL(Mode__c,&apos;Cheque&apos;),&apos;CSN&apos;,IF(ISPICKVAL(Mode__c,&apos;Credit Card&apos;),&apos;CCA&apos;,IF(ISPICKVAL(Mode__c,&apos;CDM Cash&apos;),&apos;CDM-CASH&apos;,IF(ISPICKVAL(Mode__c,&apos;CDM Cheque&apos;),&apos;CDM-CHEQUE&apos;,IF(ISPICKVAL(Mode__c,&apos;International Wire Transfer&apos;),&apos;IWT&apos;,IF(ISPICKVAL(Mode__c,&apos;Domestic Wire Transfer&apos;),&apos;DWT&apos;,IF(ISPICkVAL(Mode__c,&apos;Website&apos;),&apos;E-COMMERCE&apos;,&apos;&apos;)))))))) + &apos;-&apos; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Number</label>
    <type>Text</type>
</CustomField>