force-app/main/default/objects/Payment_Request__c/fields/BF_created_by__c.field-meta.xml
<CustomField>
    <fullName>BF_created_by__c</fullName>
    <formula>New_Sale_Approval__r.BF_Created_date_and_created_By__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BF created by</label>
    <type>Text</type>
</CustomField>