force-app/main/default/objects/Payment_Request__c/fields/Booking_Id__c.field-meta.xml
<CustomField>
    <fullName>Booking_Id__c</fullName>
    <formula>if( From_Booking__c =true,Booking__r.Name,if( From_Booking__c = false, New_Sale_Approval__r.Booking__r.Name ,&apos;&apos;))</formula>
    <label>Booking Id</label>
    <type>Text</type>
</CustomField>