force-app/main/default/objects/Payment_Request__c/fields/Date_of_Initiation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Initiation__c</fullName>
    <label>Date of Initiation</label>
    <type>Date</type>
</CustomField>