force-app/main/default/objects/Payment_Request__c/fields/DP_Amount_2__c.field-meta.xml
<CustomField>
    <fullName>DP_Amount_2__c</fullName>
    <formula>New_Sale_Approval__r.DP_Amount_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DP Amount 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>