force-app/main/default/objects/Payment_Request__c/fields/Dummy__c.field-meta.xml
<CustomField>
    <fullName>Dummy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dummy</label>
    <type>Checkbox</type>
</CustomField>