force-app/main/default/objects/Payment_Request__c/fields/Emirates_Id_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Emirates_Id_Passport_Number__c</fullName>
    <label>Emirates Id / Passport Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>