force-app/main/default/objects/Payment_Request__c/fields/Enquiry_Source__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Source__c</fullName>
    <label>Enquiry Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Phone Enquiry</fullName>
            </value>
            <value>
                <fullName>Word of Mouth</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Sobha Connect</fullName>
            </value>
            <value>
                <fullName>Loyalty Sales</fullName>
            </value>
            <value>
                <fullName>Trade Show/ Exhibition</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Print Media</fullName>
            </value>
            <value>
                <fullName>Digital Marketing Sales (Inc. Influencer)</fullName>
            </value>
            <value>
                <fullName>Property Portal</fullName>
            </value>
            <value>
                <fullName>Contact Centre</fullName>
            </value>
            <value>
                <fullName>Mall Stands/Kiosks Sales</fullName>
            </value>
            <value>
                <fullName>Unified Messaging</fullName>
            </value>
            <value>
                <fullName>Telesales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>