force-app/main/default/objects/Payment_Request__c/fields/Error_Code_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Code_Message__c</fullName>
    <label>Error Code Message</label>
    <type>TextArea</type>
</CustomField>