force-app/main/default/objects/Payment_Request__c/fields/Final_Approver__c.field-meta.xml
<CustomField>
    <fullName>Final_Approver__c</fullName>
    <label>Final Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>