force-app/main/default/objects/Payment_Request__c/fields/Interim_Payment__c.field-meta.xml
<CustomField>
    <fullName>Interim_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interim Payment</label>
    <referenceTo>PropStrength__Interim_Payment__c</referenceTo>
    <relationshipLabel>Payment Requests</relationshipLabel>
    <relationshipName>Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>