force-app/main/default/objects/Payment_Request__c/fields/Is_Receipt_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Receipt_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Receipt Created?</description>
    <label>Is Receipt Created</label>
    <type>Checkbox</type>
</CustomField>