force-app/main/default/objects/Payment_Request__c/fields/Last_Call_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Order_Status__c</fullName>
    <label>Last Call Order Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>