force-app/main/default/objects/Payment_Request__c/fields/Last_POP_Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_POP_Transaction_Status__c</fullName>
    <label>Last POC Transaction Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INITIATED</fullName>
            </value>
            <value>
                <fullName>AUTHORIZED</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <fullName>CANCELED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>