force-app/main/default/objects/Payment_Request__c/fields/Last_Status_Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Call_Date_Time__c</fullName>
    <label>Last Status Call Date/Time</label>
    <type>DateTime</type>
</CustomField>