force-app/main/default/objects/Payment_Request__c/fields/Last_Status_Call_User__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Call_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Status Call User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payment_Requests4</relationshipName>
    <type>Lookup</type>
</CustomField>