force-app/main/default/objects/Payment_Request__c/fields/Mobile_Mode_App__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Mode_App__c</fullName>
    <label>Mobile Mode App</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CDM Cash</fullName>
                <label>CDM Cash (Cash Deposit in Machine)</label>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>CDM Cheque</fullName>
                <label>CDM Cheque (Cheque Deposit in Machine)</label>
            </value>
            <value>
                <fullName>International Wire Transfer</fullName>
                <label>IWT(International)</label>
            </value>
            <value>
                <fullName>Domestic Wire Transfer</fullName>
                <label>DWT(Domestic)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>