force-app/main/default/objects/Payment_Request__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OTC Deposits</fullName>
                <label>OTC Deposit(Cash counter)</label>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>CDM Cash</fullName>
                <label>CDM Cash (Cash Deposit in Machine)</label>
            </value>
            <value>
                <fullName>CDM Cheque</fullName>
                <label>CDM Cheque (Cheque Deposit in Machine)</label>
            </value>
            <value>
                <fullName>International Wire Transfer</fullName>
                <label>IWT(International)</label>
            </value>
            <value>
                <fullName>Domestic Wire Transfer</fullName>
                <label>DWT(Domestic)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>