force-app/main/default/objects/Payment_Request__c/fields/Modified_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Modified_Date_and_Time__c</fullName>
    <label>Modified Date and Time</label>
    <type>DateTime</type>
</CustomField>