force-app/main/default/objects/Payment_Request__c/fields/Mortgage_Value__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Value__c</fullName>
    <label>Mortgage Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>