force-app/main/default/objects/Payment_Request__c/fields/New_Sale_Approval__c.field-meta.xml
<CustomField>
    <fullName>New_Sale_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Sale Approval</label>
    <referenceTo>unit_hold_request__c</referenceTo>
    <relationshipLabel>Payment Requests</relationshipLabel>
    <relationshipName>Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>