force-app/main/default/objects/Payment_Request__c/fields/New_Sale_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Sale_Approved_Date__c</fullName>
    <formula>New_Sale_Approval__r.Approved_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Sale Approved Date</label>
    <type>Date</type>
</CustomField>