force-app/main/default/objects/Payment_Request__c/fields/NSA_Receipt_check__c.field-meta.xml
<CustomField>
    <fullName>NSA_Receipt_check__c</fullName>
    <formula>New_Sale_Approval__r.Receipt_Created__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSA Receipt check</label>
    <type>Checkbox</type>
</CustomField>