force-app/main/default/objects/Payment_Request__c/fields/Original_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Amount__c</fullName>
    <label>Original Amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>