force-app/main/default/objects/Payment_Request__c/fields/Other_Mode_Status__c.field-meta.xml
<CustomField>
    <fullName>Other_Mode_Status__c</fullName>
    <formula>TEXT(Payment_Request__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Mode Status</label>
    <type>Text</type>
</CustomField>